2009-03-06  Badlop  <badlop@process-one.net>

	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
	Evgeniy Khramtsov)

2009-03-05  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: In a Windows machine, explicitly add the
	nameservers, as it seems Erlang does not do itself (EJAB-860)
	* src/win32_dns.erl: Get name servers from Windows registy (thanks
	to Geoff Cant)

	* doc/guide.tex: Require OpenSSL 0.9.8f or higher (EJAB-877)
	* doc/guide.html: Likewise

2009-03-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: If anonymous auth is enabled, when
	checking if the account already exists in other auth methods, take
	into account if the auth method failed (EJAB-882)
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise

	* src/mod_caps.erl: Fix two small compilation errors

2009-03-04  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Add roster subscriptions handling
	so on_sub_and_presence if fully supported.

	* src/mod_pubsub/mod_pubsub.erl: Allow to send PEP events to all
	connected ressources, even via s2s.
	* src/mod_caps.erl: Likewise

2009-03-03  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Fix report message of 'undef' error

	* src/ejabberd_listener.erl: Fix a minor compilation warning and
	add EDoc comment

	* src/ejabberd_listener.erl: When stopping a listener, don't stop
	the listener supervisor (EJAB-874)

	* src/ejabberd_listener.erl: More error detections

	* src/ejabberd_config.erl: Check certfiles are readable on server
	start and listener start (EJAB-753)
	* src/ejabberd_listener.erl: Likewise

	* src/ejabberd_listener.erl: Report error at startup if a listener
	module isn't available or is not an ejabberd listener (EJAB-868)
